# Rust_trading_project

./: .gitignore  Cargo.toml  README.md
src/: get_data.rs  main.rs  reward.rs  run_encoder.rs  train_agent.rs  train_encoder.rs  utils.rs
src/encoder/: autoencoder.rs  decoder.rs  encoder.rs  mod.rs  train.rs  utils.rs
src/encoder_test/: autoencoder.rs  decoder.rs  utils.rs
src/ppo/: actor.rs  ppo.rs
src/ppo_agent/: actor.rs  critic.rs  mod.rs  ppo.rs
src/sac_agent/: q_network.rs
