[package]
name = "trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
serde_json = "1.0"
tungstenite = { version = "0.20.1", features = ["native-tls"] }