[package]
name = "trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.11.1", features = ["wgpu", "train"] }
serde = "1.0.193"
serde_json = "1.0"
tungstenite = { version = "0.20.1", features = ["native-tls"] }